# the-dynamic-typists

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  dev-requirements.txt  pyproject.toml  serve.sh  tox.ini
.devcontainer/: devcontainer.json  postcreate.sh
.github/workflows/: lint.yaml
app/: Picture.py  README.md  Scrambler.py  Tile.py  __init__.py  main.py  picture.py  pyrightconfig.json  scrambler.py  serve.sh  server.py  solver.py  tile.py
frontend/: README.md  config.toml  index.html  main.py  pyrightconfig.json  scripts.js  serve.sh  style.css
frontend/controllers/: __init__.py  app.py  click_rotation_controller.py  drag_drop_grid_controller.py  drag_rotation_controller.py  image_grid_controller.py  rotating_images_controller.py  rotation_controller.py  transform_controller.py
frontend/src/: main.py
protocol/: README.md  __init__.py  solution.py  tiles.py
samples/: Pipfile  pyproject.toml
typings/: README.md  js.pyi
