[tool.poetry]
# Left empty for now.
name = "Name"
version = "0.1.0"
description = ""
authors = []
license = "MIT"

[tool.poetry.dependencies]
python = "~3.11"

[tool.poetry.group.dev.dependencies]
pre-commit = "~2.17.0"
black = "~23.7.0"
ruff = "0.0.286"
# Pyright has regressions and fixes every version.
pyright = "1.1.324"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 119
target-version = ["py311"]

[tool.pyright]
typeCheckingMode = "strict"
pythonVersion = "3.11"
reportUnnecessaryTypeIgnoreComment = true

[tool.ruff]
select = ["ALL"]
ignore = [
    "ANN002", "ANN003", "ANN101", "ANN102", "ANN201", "ANN204", "ANN206", "ANN401",
    "B904",
    "C401", "C408",
    "D100", "D101", "D102", "D104", "D105", "D107", "D203", "D212", "D214", "D215", "D301",
    "D400", "D401", "D402", "D404", "D405", "D406", "D407", "D408", "D409", "D410", "D411", "D412", "D413", "D414", "D416", "D417",
    "E731",
    "N999",
    "Q000",
    "RET504",
    "RUF005",
    "S311",
    "SIM102", "SIM108", "SIM110",
    "UP015",
]
line-length = 119

[tool.ruff.per-file-ignores]
# Ignore unused imports in init, caused by star imports.
# More convenient to provide `__all__` in files instead of duplicating in package __init__.
"__init__.py" = ["F401"]

[tool.ruff.pydocstyle]
convention = "numpy"
